--- a/index2.html
+++ b/index2.html
@@ -39,11 +39,17 @@
     </div>
 
 
-    <script src="script.js"></script>
+   
     <p id="xyz"></p>
 
     </div>
-
+    
+    <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+ 
 </body>
 
 </html>
