added s after http request for amcharts on index2.html

--- a/index2.html
+++ b/index2.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CALIFORNIA COUNTIES</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="http://www.amcharts.com/lib/4/core.js"></script>
-    <script src="http://www.amcharts.com/lib/4/maps.js"></script>
-    <script src="http://www.amcharts.com/lib/4/geodata/worldLow.js"></script>
-    <script src="http://www.amcharts.com/lib/4/geodata/region/usa/caLow.js"></script>
+    <script src="https://www.amcharts.com/lib/4/core.js"></script>
+    <script src="https://www.amcharts.com/lib/4/maps.js"></script>
+    <script src="https://www.amcharts.com/lib/4/geodata/worldLow.js"></script>
+    <script src="https://www.amcharts.com/lib/4/geodata/region/usa/caLow.js"></script>
 
 
 </head>
