--- a/index2.html
+++ b/index2.html
@@ -19,8 +19,10 @@
     <!-- top row -->
     <div class="row" id="headline">
         <h1>CALIFORNIA COUNTIES</h1>
+               
 
     </div>
+    <div class="flex-container">
 
         <!-- second row -->
         <div class="row">
