updated text when loading page

--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
                 <div id="chartdiv"></div>
             </div>
             <div class="column">
-                <p id="county-text">Learn About California by clicking on a county!</p>
+                <p id="county-text">Learn About California by clicking on a county! See a background image and info</p>
             </div>
             <div class="column">
                 <div id="information"></div>
