--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
                 <div id="chartdiv"></div>
             </div>
             <div class="column">
-                <p id="county-text">Learn About California by clicking on a county! See a background image and info. DRAG & DROP THE MAP!</p>
+                <p id="county-text">Learn About California by clicking on a county! See a background image and info. DRAG & DROP or ZOOM IN ON THE MAP!</p>
             </div>
   
 
